# VariantConfig

./: .travis.yml  Cargo.toml  README.md  codecov.yml  deny.toml
.github/workflows/: cancel-stale.yml  example.yml  main.yml
crates/variant-config/: Cargo.toml
crates/variant-config/benches/: benchmarks.rs
crates/variant-config/src/: lib.rs  vc_config.rs
crates/variant-config/src/dsl/: fn_translator.rs  frontend.rs  mod.rs  utils.rs  variant_value.rs
crates/variant-config/src/resolver/: json_config_resolver.rs  mod.rs
crates/variant-config/tests/: dsl_tests.rs  resolver_tests.rs  store_tests.rs
crates/variant-config/tests/data/: c1.json  c1.toml  c1.yaml  simple.yaml
example/: .gitignore  Cargo.toml  README.md  build.rs  run.cmd  run.sh
example/pages/: .gitignore  .vercelignore  Cargo.toml  README.md  package.json  vercel.json
example/pages/api/: Cargo.toml  _utils.rs  convert.rs  ip.rs
example/pages/api/api-rs/: Cargo.toml
example/pages/api/api-rs/src/: convert.rs
example/pages/api/src/: convert.rs  ip.rs  lib.rs
example/pages/src/: App.vue  defaultContent.ts  index.html  index.ts  styles.scss
example/src/: convert_api.rs  index_page.rs  main.rs  payloads.rs
