[package]
authors = ["hanabi1224 <harlowmoo@gmail.com>"]
edition = "2018"
license = "MIT"
name = "web-example"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0"
actix-web = "3"
# openssl = "0"
serde = {version = "1", features = ["derive"]}
variant-config = {path = "../crates/variant-config"}

[dev-dependencies]

[build-dependencies]
anyhow = "1"
