[package]
edition = "2021"
license = "MIT"
name = "web-example"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6"
axum-extra = {version = "0.4", features = ["spa"]}
serde = {version = "1", features = ["derive"]}
tokio = {version = "1.24", features = ["macros", "rt-multi-thread"]}
variant-config = {path = "../crates/variant-config"}

[dev-dependencies]

[build-dependencies]
anyhow = "1"
