[package]
description = "variant config"
edition = "2021"
license = "MIT"
name = "variant-config"
repository = "https://github.com/hanabi1224/VariantConfig"
version = "0.2.0"

[features]

[dependencies]
ahash = "0.8"
anyhow = "1"
cranelift = "0.111"
cranelift-jit = "0.111"
cranelift-module = "0.111"
hashbrown = "0.15"
log = "0.4"
peg = "0.8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}

[lib]
crate-type = ["lib", "cdylib"]

[[bench]]
harness = false
name = "benchmarks"
