[package]
edition = "2021"
license = "MIT"
name = "api"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
reqwest = "0.12"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
variant-config = {git = "https://github.com/hanabi1224/VariantConfig", branch = "main"}
vercel_runtime = "1"

[dev-dependencies]

[[bin]]
name = "ip"
path = "api/ip.rs"

[[bin]]
name = "convert"
path = "api/convert.rs"
