[package]
name = "variant-config-demo-vercel-api"
version = "0.1.0"

license = "MIT"
publish = false

edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-rs = {path = "api-rs"}
# serde = {version = "1", features = ["derive"]}
# variant-config = "0"
# variant-config = {path = "../../../crates/variant-config"}
# vercel_lambda = "0"

[dev-dependencies]

[lib]
name = "utils"
path = "_utils.rs"
