[package]
edition = "2021"
license = "MIT"
name = "api"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
reqwest = "0.11"
serde = {version = "1", features = ["derive"]}
variant-config = "0.1"
vercel_lambda = {git = "https://github.com/hanabi1224/rust", branch = "update_lambda_runtime_deps"}

[dev-dependencies]

[lib]
